# SPPM

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: bpt2ply.py  png2ppm.py  teapot.bpt  teapot.ply  water.ply
src/: BRDF.h  Camera.cpp  Camera.h  Config.h  HitPoint.cpp  HitPoint.h  Object.cpp  Object.h  Ray.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h  Vector.cpp  Vector.h  main.cpp
