cmake_minimum_required (VERSION 3.0)
project (SPPM)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -w --std=c++11 -O2 -g")
if (CMAKE_SYSTEM_NAME MATCHES "Linux")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
endif ()
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./bin)
aux_source_directory(./src SOURCES)
add_executable(sppm ${SOURCES})
